@@ -1,5 +1,11 @@
 2005-08-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* hildon-widgets/hildon-get-password-dialog.c: Add "numbers_only"
+	property for setting the password entry accept only numeric values.
+	N#15212
+
+2005-08-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* hildon-widgets/hildon-calendar-popup.c (MAX_YEAR, MIN_YEAR):
 	* hildon-widgets/hildon-note.c (ELLIPSATION_STRING, BOX_SPAXING):
 	* hildon-widgets/hildon-volumebar-range.c (CHANGE_THRESHOLD):
